--- a/styles.css
+++ b/styles.css
@@ -56,6 +56,17 @@ header {
   );
   border-bottom: 1px solid rgba(148, 163, 184, 0.3);
 }
+.nav-logo-link {
+  display: inline-flex;
+  align-items: center;
+  text-decoration: none;
+}
+
+.nav-logo-image {
+  height: 32px;
+  width: auto;
+  display: block;
+}
 
 .nav-inner,
 .main-inner,
@@ -501,3 +512,4 @@ footer {
     width: 100%;
   }
 }
+
